--- a/EasyMap.Gui/Properties/Resources.resx
+++ b/EasyMap.Gui/Properties/Resources.resx
@@ -117,4 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="RepoUrl" xml:space="preserve">
+    <value>http://github.com/chatilaah/EasyMap</value>
+  </data>
 </root>
